# rclone-filesystem

./: README.md  main.py  pyproject.toml
.github/workflows/: pytest.yaml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v0.2-MILESTONE-AUDIT.md  v0.2-REQUIREMENTS.md
.planning/milestones/v0.2-phases/01-path-infrastructure-and-protocol-registration/: 01-01-PLAN.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/milestones/v0.2-phases/02-file-io-contract-fix/: 02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/milestones/v0.2-phases/03-listing-metadata-caching/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/milestones/v0.2-phases/04-transfer-operations-and-mutations/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md
.planning/milestones/v0.2-phases/05-polish-and-ecosystem-readiness/: 05-01-PLAN.md  (+4 more)
.planning/phases/01-path-infrastructure-and-protocol-registration/: 01-01-SUMMARY.md  01-02-PLAN.md  01-CONTEXT.md  01-VALIDATION.md
.planning/phases/02-file-io-contract-fix/: 02-01-PLAN.md  02-01-SUMMARY.md  02-CONTEXT.md
.planning/phases/03-listing-metadata-caching/: 03-RESEARCH.md
.planning/phases/04-transfer-operations-and-mutations/: 04-01-PLAN.md  04-02-PLAN.md  04-CONTEXT.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-polish-and-ecosystem-readiness/: 05-01-SUMMARY.md  05-02-PLAN.md  05-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
rclone_filesystem/: __init__.py  settings.py
tests/: test_compare_s3fs.py  test_contract.py  test_path.py  test_progress.py  test_protocol.py  test_settings.py
tests/s3fs_compare/: conftest.py  test_cache.py  test_cat.py  test_contract_integration.py  test_cp.py  test_errors.py  test_exists.py  test_find.py  test_get.py  test_glob.py  test_info.py  test_ls.py  test_mkdir.py  test_move.py  test_open.py  test_put.py  test_rm.py  test_text_mode.py  test_write.py
