[project]
name = "rclone-filesystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fsspec>=2025.5.1",
    "rclone-python>=0.1.21",
]

[dependency-groups]
dev = [
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "moto>=5.1.5",
    "pytest>=8.4.0",
    "s3fs>=2025.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"