[project]
name = "rclone-filesystem"
version = "0.1.0"
description = "A Python package for integrating rclone with fsspec"
authors = [
    { name = "Fabian Zills", email = "fzills@icp.uni-stuttgart.de" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fsspec>=2025.5.1",
    "rclone-python>=0.1.21",
]

[project.urls]
Repository = "https://github.com/zincware/rclone-filesystem"
Releases = "https://github.com/zincware/rclone-filesystem/releases"
Discord = "https://discord.gg/7ncfwhsnm4"

[dependency-groups]
dev = [
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "moto>=5.1.5",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "s3fs>=2025.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
